# rust-c-str

./: AUTHORS.txt  COPYRIGHT  Cargo.toml  Makefile  README.md
benches/: bench.rs
src/: bench.rs  c_str.rs  lib.rs  tests.rs
tests/: bench.rs  tests.rs
