[package]

name = "c_string"
version = "0.7.0"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
description = "C string helpers for Rust"
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["C", "string"]
repository = "https://github.com/mzabaluev/rust-c-str.git"

[dependencies]
libc = "0.1"

[lib]
name = "c_string"
path = "src/c_str.rs"
